--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
-language: python
-python: 2.7
 sudo: false
 
-cache:
-  directories:
-    - "~/.platformio"
+matrix:
+  include:
+    - language: python
+      python: 2.7
 
-install:
-  - pip install -U platformio
+      cache:
+        directories:
+          - "~/.platformio"
 
-script:
-  - platformio run
+      install:
+        - pip install -U platformio
+
+      script:
+        - (cd rover && platformio run)
