Move back to ysbaddaden's sdl.cr since ysbaddaden/sdl.cr#18 was merged

--- a/groundstation/shard.yml
+++ b/groundstation/shard.yml
@@ -10,8 +10,8 @@ targets:
 
 dependencies:
   sdl:
-    github: RX14/sdl.cr
-    branch: patch-1
+    github: ysbaddaden/sdl.cr
+    branch: master
 
 crystal: 0.24.1
 
