--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
 
       script:
         - (cd rover && platformio run)
+        - (cd transmitter && platformio run)
 
     - language: crystal
 
